--- a/support.html
+++ b/support.html
@@ -130,8 +130,8 @@
           <ul>
             <li><a title="个人中心" id="personalInfo"><i class="fa fa-user">个人中心</i></a></li>
             <li><a title="登录" id="login"><i class="fa fa-user">登录</i></a></li>
-            <li></li>
-            <li><a href="register.html" title="注册"><i class="fa fa-registered">注册</i></a></li>
+            <li><a href="#" title="退出" id="signout"><i class="fa fa-sign-out">退出</i></a></li>
+            <li><a href="register.html" title="注册" id="register"><i class="fa fa-registered">注册</i></a></li>
           </ul>
         </div>
         <div class="clearfix"></div>
