--- a/contact.html
+++ b/contact.html
@@ -43,6 +43,7 @@
   <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
   <![endif]-->
   <link rel="stylesheet" href="./css/index.css">
+  <link rel="stylesheet" href="./css/contact.css">
 </head>
 <body>
 <!--登录弹窗-->
@@ -127,8 +128,8 @@
           <ul>
             <li><a title="个人中心" id="personalInfo"><i class="fa fa-user">个人中心</i></a></li>
             <li><a title="登录" id="login"><i class="fa fa-user">登录</i></a></li>
-            <li></li>
-            <li><a href="register.html" title="注册"><i class="fa fa-registered">注册</i></a></li>
+            <li><a href="#" title="退出" id="signout"><i class="fa fa-sign-out">退出</i></a></li>
+            <li><a href="register.html" title="注册" id="register"><i class="fa fa-registered">注册</i></a></li>
           </ul>
         </div>
         <div class="clearfix"></div>
@@ -143,31 +144,18 @@
   <!-- container -->
   <div class="container">
     <div class="mail-grids">
-      <div class="col-md-6 mail-grid-left">
-        <h3>Address</h3>
-        <h5>Cras porttitor imperdiet volutpat nulla malesuada lectus eros
-          <span>ut convallis felis consectetur ut </span></h5>
-        <h4>Headquarters</h4>
-        <p>123 T. Globel Place.
-          <span>CG 09-123</span>
-          London, Ba. 4567
-        </p>
-        <h4>Get In Touch</h4>
-        <p>Telephone: +1 234 567 9871
-          <span>FAX: +1 234 567 9871</span>
-          E-mail: <a href="mailto:info@example.com">mail@example.com</a>
-        </p>
-      </div>
-      <div class="col-md-6 contact-form">
-        <form action="#" method="post">
-          <input type="text" name="Name" placeholder="Name" required="">
-          <input type="email" name="Email" placeholder="Email" required="">
-          <input type="text" name="Subject" placeholder="Subject" required="">
-          <textarea name="Message" placeholder="Message" required=""></textarea>
-          <input type="submit" value="SEND">
-        </form>
+      <div class="mail-grid-left">
+        <h3>地址</h3>
+        <h5>广西自治区柳州市新柳大道99号</h5><br>
+        <h3>邮箱</h3>
+        <h5>tomatooss@163.com</h5><br>
+        <h3>电话</h3>
+        <h5>556621234</h5>
       </div>
       <div class="clearfix"></div>
+    </div>
+    <div class="supportPageMainBottomImg">
+      <img src="https://www.catchat.org/images/home/cnh_seecats_670.jpg" alt="">
     </div>
   </div>
   <!-- //container -->
