完善“待救助”页面

--- a/publish.html
+++ b/publish.html
@@ -161,9 +161,9 @@
     <div class="publishContent">
       <div class="">
         <div class="form-group has-success  ">
-          <label class="control-label">头像：</label>
+          <label class="control-label">图片：</label>
 
-          <div id="drop_area" style="height:200px"></div>
+          <div id="drop_area" style="height:200px;font-size:12px"></div>
           <script type="text/javascript">
             let dragImgUpload = new DragImgUpload("#drop_area", {
               callback: function (files) {
