--- a/blog.html
+++ b/blog.html
@@ -125,11 +125,6 @@
 				<div class="clearfix"> </div>
 			</div>
 		</div>
-		<div class="about-heading">	
-			<div class="container">
-				<h2>Our Blog</h2>
-			</div>
-		</div>
 	</div>
 	<!-- //banner -->
 	<!-- blog -->
@@ -137,7 +132,7 @@
 		<!-- container -->
 		<div class="container">
 			<div class="blog-top-grids">
-				<div class="col-md-8 blog-top-left-grid">
+				<div class="blog-top-left-grid">
 					<div class="left-blog">
 						<div class="blog-left">
 							<div class="blog-left-left">
@@ -205,70 +200,7 @@
 						</ul>
 					</nav>
 				</div>
-				<div class="col-md-4 blog-top-right-grid">
-					<div class="Categories">
-						<h3>Categories</h3>
-						<ul>
-							<li><a href="#">Phasellus sem leo, interdum quis risus</a></li>
-							<li><a href="#">Nullam egestas nisi id malesuada aliquet </a></li>
-							<li><a href="#"> Donec condimentum purus urna venenatis</a></li>
-							<li><a href="#">Ut congue, nisl id tincidunt lobor mollis</a></li>
-							<li><a href="#">Cum sociis natoque penatibus et magnis</a></li>
-							<li><a href="#">Suspendisse nec magna id ex pretium</a></li>
-						</ul>
-					</div>
-					<div class="Categories">
-						<h3>Archive</h3>
-						<ul class="marked-list offs1">
-							<li><a href="#">May 2015 (7)</a></li>
-							<li><a href="#">April 2015 (11)</a></li>
-							<li><a href="#">March 2015 (12)</a></li>
-							<li><a href="#">February 2015 (14)</a> </li>
-							<li><a href="#">January 2015 (10)</a></li>    
-							<li><a href="#">December 2014 (12)</a></li>
-							<li><a href="#">November 2014 (8)</a></li>
-							<li><a href="#">October 2014 (7)</a> </li>
-							<li><a href="#">September 2014 (8)</a></li>
-							<li><a href="#">August 2014 (6)</a></li>                          
-						</ul>
-					</div>
-					<div class="comments">
-						<h3>Recent Comments</h3>
-						<div class="comments-text">
-							<div class="col-md-3 comments-left">
-								<img src="images/t1.jpg" alt="" />
-							</div>
-							<div class="col-md-9 comments-right">
-								<h5>Admin</h5>
-								<a href="#">Phasellus sem leointerdum risus</a> 
-								<p>March 16,2014 6:09:pm</p>
-							</div>
-							<div class="clearfix"> </div>
-						</div>
-						<div class="comments-text">
-							<div class="col-md-3 comments-left">
-								<img src="images/t2.jpg" alt="" />
-							</div>
-							<div class="col-md-9 comments-right">
-								<h5>Admin</h5>
-								<a href="#">Phasellus sem leointerdum risus</a> 
-								<p>March 16,2014 6:09:pm</p>
-							</div>
-							<div class="clearfix"> </div>
-						</div>
-						<div class="comments-text">
-							<div class="col-md-3 comments-left">
-								<img src="images/t3.jpg" alt="" />
-							</div>
-							<div class="col-md-9 comments-right">
-								<h5>Admin</h5>
-								<a href="#">Phasellus sem leointerdum risus</a> 
-								<p>March 16,2014 6:09:pm</p>
-							</div>
-							<div class="clearfix"> </div>
-						</div>
-					</div>
-				</div>
+
 				<div class="clearfix"> </div>
 			</div>
 		</div>
