待救助页面添加分页

--- a/publish.html
+++ b/publish.html
@@ -121,7 +121,7 @@
                   </ul>
                 </li>
                 <li><a href="gallery.html">画廊</a></li>
-                <li><a href="blog.html">待救助</a></li>
+                <li><a href="rescue.html">待救助</a></li>
                 <li><a href="good.html">商城</a></li>
                 <li><a href="support.html">支持</a></li>
                 <li><a class="" href="contact.html">联系我们</a></li>
@@ -315,7 +315,7 @@
           <div class="col-md-6 footer-grid-left">
             <ul>
               <li><a href="good.html">商城</a></li>
-              <li><a href="blog.html">待救助</a></li>
+              <li><a href="rescue.html">待救助</a></li>
             </ul>
           </div>
           <div class="col-md-6 footer-grid-left">
