--- a/contact.html
+++ b/contact.html
@@ -114,7 +114,7 @@
                   </ul>
                 </li>
                 <li><a href="gallery.html">画廊</a></li>
-                <li><a href="blog.html">待救助</a></li>
+                <li><a href="rescue.html">待救助</a></li>
                 <li><a href="good.html">商城</a></li>
                 <li><a href="support.html">支持</a></li>
                 <li><a class="active" href="contact.html">联系我们</a></li>
@@ -203,7 +203,7 @@
         <div class="col-md-6 footer-grid-left">
           <ul>
             <li><a href="good.html">商城</a></li>
-            <li><a href="blog.html">待救助</a></li>
+            <li><a href="rescue.html">待救助</a></li>
           </ul>
         </div>
         <div class="col-md-6 footer-grid-left">
