完成“商品列表”页面

--- a/goodlist.html
+++ b/goodlist.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Good</title>
+  <title>GoodList</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="utf-8">
   <meta name="keywords" content=""/>
@@ -52,6 +52,7 @@
 
   <!--  引入good的nav样式-->
   <link rel="stylesheet" href="css/goodnav.css">
+
 
 
 </head>
@@ -152,6 +153,7 @@
   <!--  </div>-->
 </div>
 <!-- //banner -->
+
 <!--aside-->
 <div id="aside">
   <div class="container">
@@ -501,74 +503,141 @@
     </div>
   </div>
 </div>
-
 <!--//aside-->
+
 <!-- 主体 -->
 <div class="about">
-  <!-- about-top -->
-  <div class="agileits-about-top">
+  <!-- 商品列表 -->
+  <div class="team">
     <div class="container">
-      <!--      <div class="agileits-about-top-heading">-->
-      <!--        <h3>Who we are</h3>-->
-      <!--      </div>-->
-      <div class="agileinfo-top-grids">
-        <div id="myCarousel" class="carousel slide">
-          <!-- 轮播（Carousel）指标 -->
-          <ol class="carousel-indicators">
-            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-            <li data-target="#myCarousel" data-slide-to="1"></li>
-            <li data-target="#myCarousel" data-slide-to="2"></li>
-          </ol>
-          <!-- 轮播（Carousel）项目 -->
-          <div class="carousel-inner">
-            <div class="item active">
-              <img src="https://img.gzzhitu.com/zhitu-api/1554796860158.jpg"
-                   alt="First slide">
-            </div>
-            <div class="item">
-              <img src="https://img.gzzhitu.com/zhitu-api/1554796897236.jpg"
-                   alt="Second slide">
-            </div>
-            <div class="item">
-              <img src="https://img.gzzhitu.com/zhitu-api/1554796897236.jpg"
-                   alt="Third slide">
+      <div class="choiceness-title">
+        <h2 id="systematicNname">商品分类</h2>
+      </div>
+      <div class="agile_team_grids" id="systematicGoodList">
+        <div class="col-md-3 agile_team_grid">
+          <div class="agile_team_grid_main">
+            <img src="http://img.boqiicdn.com/Data/U/P/img91405b8f86335f8da.jpg" alt=" " class="img-responsive">
+            <div class="p-mask">
+              <ul class="top-links two">
+                <li><a href="#"><i class="fa fa-cart-arrow-down"></i></a></li>
+              </ul>
             </div>
           </div>
-          <!-- 轮播（Carousel）导航 -->
-          <a class="carousel-control left" href="#myCarousel"
-             data-slide="prev"> <span _ngcontent-c3="" aria-hidden="true"
-                                      class="glyphicon glyphicon-chevron-left"></span></a>
-          <a class="carousel-control right" href="#myCarousel"
-             data-slide="next"><span _ngcontent-c3="" aria-hidden="true"
-                                     class="glyphicon glyphicon-chevron-right"></span></a>
+          <div class="agile_team_grid1">
+            <h3>* OFFER * 3 Cards for £5 (choose from 6 designs)</h3>
+            <p style="text-align: left;color:gray">The cards retail at £1.99 each, so buy 3 and save .97p!Choose any
+              3 cards - Six designs to choose fr..</p>
+            <p>£5.00</p>
+          </div>
         </div>
 
-        <!--        <div class="clearfix"> </div>-->
+
+        <div class="col-md-3 agile_team_grid">
+          <div class="agile_team_grid_main">
+            <img src="http://img.boqiicdn.com/Data/U/P/img91405b8f86335f8da.jpg" alt=" " class="img-responsive">
+            <div class="p-mask">
+              <ul class="top-links two">
+                <li><a href="#"><i class="fa fa-cart-arrow-down"></i></a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="agile_team_grid1">
+            <h3>* OFFER * 3 Cards for £5 (choose from 6 designs)</h3>
+            <p style="text-align: left;color:gray">The cards retail at £1.99 each, so buy 3 and save .97p!Choose any
+              3 cards - Six designs to choose fr..</p>
+            <p>£5.00</p>
+          </div>
+        </div>
+
+
+        <div class="col-md-3 agile_team_grid">
+          <div class="agile_team_grid_main">
+            <img src="http://img.boqiicdn.com/Data/U/P/img91405b8f86335f8da.jpg" alt=" " class="img-responsive">
+            <div class="p-mask">
+              <ul class="top-links two">
+                <li><a href="#"><i class="fa fa-cart-arrow-down"></i></a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="agile_team_grid1">
+            <h3>* OFFER * 3 Cards for £5 (choose from 6 designs)</h3>
+            <p style="text-align: left;color:gray">The cards retail at £1.99 each, so buy 3 and save .97p!Choose any
+              3 cards - Six designs to choose fr..</p>
+            <p>£5.00</p>
+          </div>
+        </div>
+
+
+        <div class="col-md-3 agile_team_grid">
+          <div class="agile_team_grid_main">
+            <img src="http://img.boqiicdn.com/Data/U/P/img91405b8f86335f8da.jpg" alt=" " class="img-responsive">
+            <div class="p-mask">
+              <ul class="top-links two">
+                <li><a href="#"><i class="fa fa-cart-arrow-down"></i></a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="agile_team_grid1">
+            <h3>* OFFER * 3 Cards for £5 (choose from 6 designs)</h3>
+            <p style="text-align: left;color:gray">The cards retail at £1.99 each, so buy 3 and save .97p!Choose any
+              3 cards - Six designs to choose fr..</p>
+            <p>£5.00</p>
+          </div>
+        </div>
+
+        <div class="col-md-3 agile_team_grid">
+          <div class="agile_team_grid_main">
+            <img src="http://img.boqiicdn.com/Data/U/P/img91405b8f86335f8da.jpg" alt=" " class="img-responsive">
+            <div class="p-mask">
+              <ul class="top-links two">
+                <li><a href="#"><i class="fa fa-cart-arrow-down"></i></a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="agile_team_grid1">
+            <h3>* OFFER * 3 Cards for £5 (choose from 6 designs)</h3>
+            <p style="text-align: left;color:gray">The cards retail at £1.99 each, so buy 3 and save .97p!Choose any
+              3 cards - Six designs to choose fr..</p>
+            <p>£5.00</p>
+          </div>
+        </div>
+        <div class="col-md-3 agile_team_grid">
+          <div class="agile_team_grid_main">
+            <img src="http://img.boqiicdn.com/Data/U/P/img91405b8f86335f8da.jpg" alt=" " class="img-responsive">
+            <div class="p-mask">
+              <ul class="top-links two">
+                <li><a href="#"><i class="fa fa-cart-arrow-down"></i></a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="agile_team_grid1">
+            <h3>* OFFER * 3 Cards for £5 (choose from 6 designs)</h3>
+            <p style="text-align: left;color:gray">The cards retail at £1.99 each, so buy 3 and save .97p!Choose any
+              3 cards - Six designs to choose fr..</p>
+            <p>£5.00</p>
+          </div>
+        </div>
+        <div class="col-md-3 agile_team_grid">
+          <div class="agile_team_grid_main">
+            <img src="http://img.boqiicdn.com/Data/U/P/img91405b8f86335f8da.jpg" alt=" " class="img-responsive">
+            <div class="p-mask">
+              <ul class="top-links two">
+                <li><a href="#"><i class="fa fa-cart-arrow-down"></i></a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="agile_team_grid1">
+            <h3>* OFFER * 3 Cards for £5 (choose from 6 designs)</h3>
+            <p style="text-align: left;color:gray">The cards retail at £1.99 each, so buy 3 and save .97p!Choose any
+              3 cards - Six designs to choose fr..</p>
+            <p>£5.00</p>
+          </div>
+        </div>
+
+        <div class="clearfix"></div>
       </div>
     </div>
   </div>
-  <!-- //about-top -->
-
-  <!-- choose -->
-  <div class="">
-    <div class="container">
-      <div id="shopPageExplain">
-        <span>欢迎来到动物聊天店</span>
-        <ul>
-          <li>目前每年有超过10,000只被救出的猫和小猫，通过Cat Chat找到一个新家。</li>
-          <li>每次从我们的商店购买都可以帮助更多的猫从避难所进入家中。</li>
-          <li>感谢您的支持！</li>
-        </ul>
-
-        <p><strong>如何订购：</strong>点击上面的菜单找到你要找的东西 - 购物愉快！ </p>
-        <p><strong>通过信用卡/借记卡或PayPal付款：</strong>我们的商店由PayPal提供支持，可以接受所有主要的借记卡和信用卡以及PayPal。我们可以接受£Pounds
-          Sterling，€Euros或$ US Dollars。由于我们以英国为基础，价格以英镑为单位显示。要以欧元或美元显示价格，请从货币菜单中选择（左上角）。 </p>
-        <p><strong>支票支付：</strong>请在此处下载可打印的订单：订购单（PDF）。</p>
-      </div>
-    </div>
-  </div>
-  <!-- //choose -->
-
   <!-- 精选 -->
   <div class="team">
     <div class="container">
@@ -651,7 +720,6 @@
       </div>
     </div>
   </div>
-  <!-- //team -->
 </div>
 <!-- //主体 -->
 <!-- footer -->
@@ -737,3 +805,5 @@
 <script src="js/login.js"></script>
 <!--  引入navbar-->
 <script src="js/my_scrollbar.js"></script>
+<!--引入goodlist的js-->
+<script src="js/goodlist.js"></script>
